--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vite": "^2.9.7"
   },
   "dependencies": {
+    "gsap": "^3.10.4",
+    "lil-gui": "^0.16.1",
     "three": "^0.140.0"
   }
 }
